# auto-assist-ai

./: .gitignore  README.md  pyproject.toml
notebooks/: exploratory_analysis.ipynb
