[tool.poetry]
name = "auto-assist-ai"
version = "0.1.0"
description = "AutoAssistAI: An AI-powered chatbot revolutionizing car sales with smart, context-aware assistance."
authors = ["Krupique <krupique@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
langchain = "^0.3.15"
chromadb = "^0.6.3"
sqlalchemy = "^2.0.37"
langchain-openai = "^0.3.2"
langchain-community = "^0.3.15"
bs4 = "^0.0.2"
faiss-cpu = "^1.9.0.post1"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
